write report, make the program more robust, config so that it can produce workable exe